# open-prompt

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: build-release.yml  build.yml  test.yml  update-manifest.yml
docs/site/: index.md  package.json
go-engine/: Makefile  go.mod  go.sum  main.go
go-engine/api/: handlers_analytics.go  handlers_analytics_daily.go  handlers_analytics_test.go  handlers_auth.go  handlers_conversations.go  handlers_health.go  handlers_history.go  handlers_marketplace.go  handlers_oauth.go  handlers_plugins.go  handlers_prompt_export.go  handlers_prompts.go  handlers_prompts_test.go  handlers_providers.go  handlers_providers_test.go  handlers_query.go  handlers_skills.go  handlers_skills_test.go  handlers_telemetry.go  mention.go  mention_integration_test.go  mention_test.go  ratelimit.go  ratelimit_test.go  router.go  server.go  server_test.go  types.go  validation.go
go-engine/auth/: service.go  service_test.go  session.go
go-engine/config/: defaults.go
go-engine/db/: sqlite.go  sqlite_test.go
go-engine/engine/: command_resolver.go  command_resolver_test.go  context_detector.go  context_detector_test.go  prompt_builder.go  prompt_builder_test.go
go-engine/model/: fallback.go  (+3 more)
scripts/: build-engine.sh  dev.sh  release.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: hotkey.rs  injection.rs  ipc.rs  lib.rs  main.rs  oauth.rs  sidecar.rs  tray.rs  window.rs
(+121 files in other folders)
